--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "count-words-react",
   "private": true,
   "version": "0.1.0",
-
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -40,5 +39,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "webpack": "^5.92.1",
+    "webpack-cli": "^5.1.4"
   }
 }
