--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "eslintConfig": {
@@ -41,6 +40,10 @@
     ]
   },
   "devDependencies": {
+    "@types/chrome": "^0.0.268",
+    "copy-webpack-plugin": "^12.0.2",
+    "ts-loader": "^9.5.1",
+    "typescript": "^4.9.5",
     "webpack": "^5.92.1",
     "webpack-cli": "^5.1.4"
   }
