--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "license": "Apache",
   "private": true,
   "version": "0.1.0",
+  "main": "index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/optiklab/count-words-react.git"
