--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,9 +9,13 @@
   },
   "offline_enabled": true,
   "background": {
-    "service_worker": "background-service-worker.js"
+    "service_worker": "js/background.js"
+  },
+  "options_ui": {
+    "page": "options.html"
   },
   "action": {
+    "default_icon": "icon.png",
     "default_popup": "index.html" 
   },
   "permissions": [
@@ -27,7 +31,7 @@
   "content_scripts": [
     {
       "js": [
-        "content-script.js"
+        "js/contentScript.js"
       ],
       "matches": [
         "http://*/*",
