--- a/package.json
+++ b/package.json
@@ -11,11 +11,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "webpack --config webpack/webpack.prod.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "watch": "webpack --config webpack/webpack.dev.js --watch",
-    "build": "webpack --config webpack/webpack.prod.js"
+    "watch": "webpack --config webpack/webpack.dev.js --watch"
   },
   "dependencies": {
     "react": "^18.3.1",
@@ -25,18 +24,18 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/chrome": "^0.0.268",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.101",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@types/chrome": "^0.0.268",
     "copy-webpack-plugin": "^12.0.2",
+    "react-scripts": "^3.0.1",
     "ts-loader": "^9.5.1",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
+    "typescript": "^5.2.2",
+    "web-vitals": "^2.1.4",
     "webpack": "^5.92.1",
-    "webpack-cli": "^5.1.4",
-    "web-vitals": "^2.1.4"
+    "webpack-cli": "^5.1.4"
   },
   "eslintConfig": {
     "extends": [
