--- a/public/manifest.json
+++ b/public/manifest.json
@@ -15,7 +15,7 @@
     "page": "options.html"
   },
   "action": {
-    "default_icon": "icon.png",
+    "default_icon": "images/icon48.png",
     "default_popup": "index.html" 
   },
   "permissions": [
