--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,17 @@
 {
   "compilerOptions": {
     "composite": true,
-    "target": "ES2020",
+    "target": "ES6",
     "lib": [
       "dom",
       "dom.iterable",
-      "ES2020"
+      "ESNext"
     ],
     "module": "ESNext",
     "skipLibCheck": true,
 
     /* Bundler mode */
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
     "allowJs": true,
     "esModuleInterop": true,
     "noEmitOnError": true,
@@ -20,14 +20,13 @@
     "sourceMap": true,
     "rootDir": "src",
     "outDir": "dist/js",
-    "jsx": "react-jsx",
+    "jsx": "react",
 
     /* Linting */
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": [
-    "src"
-  ]
+  "include": [ "src" ],
+  "exclude": [ "node_modules "]
 }
