--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "@types/jest": "^27.5.2",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-slider": "^1.3.6",
     "@types/react-toggle": "^4.0.5",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.0",
     "react-scripts": "^3.0.1",
+    "react-slider": "^2.0.6",
     "react-toggle": "^4.1.3",
     "style-loader": "^4.0.0",
     "terser-webpack-plugin": "^5.3.10",
