--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/react-dom": "^18.3.0",
     "@types/react-slider": "^1.3.6",
     "@types/react-toggle": "^4.0.5",
+    "@types/xregexp": "^4.4.0",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
@@ -47,7 +48,8 @@
     "web-vitals": "^2.1.4",
     "webpack": "^5.92.1",
     "webpack-cli": "^5.1.4",
-    "webpack-merge": "^6.0.1"
+    "webpack-merge": "^6.0.1",
+    "xregexp": "^5.1.1"
   },
   "eslintConfig": {
     "extends": [
